# Master_Thesis

./: .gitignore
Arduino/hardware_interface/: hardware_interface.ino
Arduino/loading_cell_interface/: loading_cell_interface.ino
C++/: CMakeLists.txt
C++/src/: test.cpp
Cpp/: CMakeLists.txt  vcpkg.json
Cpp/CameraParams/: SideCam  SideCam_CalibrationMarkers1.txt  SideCam_CalibrationMarkers2.txt  TopCam  TopCam_CalibrationMarkers1.txt  TopCam_CalibrationMarkers2.txt  generic_dp.yml  marker_detectionAttempt_Neutral.txt
Cpp/include/: ThreadSafeValue.hpp  UdpClient.hpp
Cpp/src/: detect_markers.cpp  detection_parameters.cpp  detector_parameters.cpp  main.cpp  test.cpp
MATLAB/: dummy_path_xs=60deg,0,0_k=220k_c=5k_a=0.5.mat  filename.mat  filterTest.mat  init.m  main.m  plot_data.m  realTest.mat  tensionDirect_Dummypath_qs=60deg,0,0_a=0.5.mat  testing.m
MATLAB/ArUco/: AruCo_init.m  marker_placements.m
MATLAB/Calibration/: calib_marker_locations.m  calibration_parameters.m  camera_marker_pose.m  camera_to_world_estimation.m  test_calibration.m
MATLAB/Communication/: meas2Twh.m  parse_sensor_data.m  test_com.m
MATLAB/Gathered_Data/: discretized_system_check.mat  discretized_system_check_q=1,1,1_u=0.mat  filterTest.mat
MATLAB/Helper/: animate.m  animate_wrapping.m  animate_wrapping_musclefibre.m
MATLAB/Kalman/: EKF_pred.m  EKF_pred_euler.m  EKF_pred_quaternions.m  EKF_tuning.m  EKF_upd.m  EKF_upd_euler.m  EKF_upd_quaternions.m  H_calc.m  linearize.m  linearize_euler.m  runge_kutta4.m  test_ekf.m  (+2 more)
Python/: arucoMarkerGenerator.py  liveDetectionTest.py
(+125 files in other folders)
